[package]
name = "can-http-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
circular-buffer = "0.1.9"
tokio-socketcan = "0.3.1"
futures-util = "0.3.31"
